fix: spans gettig cut off

--- a/client/src/global-styles/mlfe.css
+++ b/client/src/global-styles/mlfe.css
@@ -34,7 +34,7 @@ ul, ol {
 }
 
 /* Fix text getting cut off unpredictably */
-h1, h2, h3, h4, h5, h6, pre, p, label, legend {
+h1, h2, h3, h4, h5, h6, pre, p, label, legend, span {
   overflow: visible;
 }
 
